# clip-translate

./: .gitignore  README.md  index.html  package.json  pnpm-lock.yaml  tailwind.config.js
.claude/: settings.local.json
src/: App.css  App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  deepl.rs  detect.rs  lib.rs  main.rs  storage.rs
src/components/: HistoryPanel.tsx  SettingsModal.tsx  TranslationView.tsx
src/hooks/: useHistory.ts  useTranslation.ts
src/lib/: tauri.ts
src/types/: index.ts
